# whombat

./: .bumpversion.cfg  .bumpversion.toml  .env  .gitignore  404.html  CODE_OF_CONDUCT.md  Dockerfile  Makefile  README.md  alembic.ini  compose-dev.yaml  compose.dev.yaml  compose.prod.yaml  docker-compose.dev.yaml  docker-compose.yaml  index.html  mkdocs.yml  objects.inv  package-lock.json  pdm.toml  pyproject.toml  pytest.ini  sitemap.xml  whombat.spec
back/: .gitignore  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  alembic.ini  app.py  build_requirements.txt  guide_requirements.txt  mkdocs-guide.yml  mkdocs.yml  pyproject.toml  requirements.txt  test_dataset.aoef  tox.ini
back/.github/: ISSUE_TEMPLATE.md
back/.github/workflows/: lint.yml  publish.yml  test.yml
back/bruno/whombat/: Annotation Projects.bru  Clip Annotation Tags.bru  Datasets.bru  Sound Event Annotation Tags.bru  bruno.json
back/bruno/whombat/clip annotations/: Annotation Task.bru  Detail.bru  List.bru
back/bruno/whombat/environments/: whombat.bru
back/bruno/whombat/evaluation sets/: List.bru
back/bruno/whombat/model_runs/: List.bru
back/bruno/whombat/notes/: Clip Annotation Notes.bru  Recording Notes.bru  Sound Event Annotation Notes.bru
back/bruno/whombat/sound event annotations/: AnnotationTask.bru  Detail.bru  List.bru  folder.bru
back/bruno/whombat/tags/: Clip Annotation Counts.bru  Clip Annotation Tags.bru  Recording Counts.bru  Recording Tags.bru  Sound Event Annotation Tags.bru  Sound Event Annotations Counts.bru  Tags.bru
back/docs/: Makefile  README.md  conf.py  glossary.rst  index.rst  installation.rst  make.bat  modules.rst  sponsors.md  usage.rst  whombat.api.rst  whombat.database.models.rst  whombat.database.rst  whombat.routers.auth.rst  whombat.routers.rst  whombat.rst  whombat.schemas.rst
back/docs/developer_guide/: code_style.md  index.md  quickstart.md
back/docs/reference/: models.md
back/docs/user_guide/: annotation_projects.md  datasets.md  evaluation.md  exploration.md  export.md  faq.md  index.md  installation.md  spectrogram_display.md
back/docs/user_guide/guides/: export.md  import.md  index.md  spectrogram_display.md
back/src/whombat/: __init__.py  __main__.py  app.py  cache.py  cli.py  exceptions.py  geometries.py  plugins.py  settings.py  static.py  system.py
back/src/whombat/api/: __init__.py  annotation_projects.py  annotation_tasks.py  annotations.py  audio.py  clip_annotations.py  clip_evaluations.py  clip_predictions.py  clips.py  common.py  dataset_recordings.py  datasets.py  evaluation_sets.py  evaluations.py  features.py  model_runs.py  notes.py  recordings.py  sessions.py  sound_event_annotations.py  sound_event_evaluations.py  sound_event_predictions.py  sound_events.py  spectrograms.py  tags.py  tasks.py  user_runs.py  users.py
back/src/whombat/core/: audio.py  common.py  files.py  geometries.py  images.py  spectrogram.py  spectrograms.py
back/src/whombat/database/: __init__.py  base.py  init.py  sessions.py  utils.py
back/src/whombat/dependencies/: __init__.py  auth.py  session.py  settings.py  users.py
back/src/whombat/filters/: __init__.py  annotation_tags.py  annotation_tasks.py  annotations.py  base.py  clip_annotation_notes.py  clip_annotation_tags.py  clip_annotations.py  clip_evaluations.py  clip_predictions.py  clips.py  datasets.py  evaluation_sets.py  evaluations.py  feature_names.py  model_runs.py  notes.py  prediction_runs.py  recording_notes.py  recording_tags.py  recordings.py  sound_event_annotation_notes.py  sound_event_annotation_tags.py  sound_event_annotations.py  sound_event_predictions.py  sound_events.py  tags.py  task_notes.py  task_tags.py  tasks.py  user_runs.py
back/src/whombat/io/: __init__.py
back/src/whombat/migrations/: env.py
back/src/whombat/models/: __init__.py  annotation.py  annotation_project.py  annotation_task.py  base.py  clip.py  clip_annotation.py  clip_evaluation.py  clip_prediction.py  dataset.py  evaluated_clip.py  evaluated_sound_event.py  evaluation.py  evaluation_set.py  evaluation_sound_event.py  evaluation_task.py  feature.py  model_run.py  note.py  predicted_sound_event.py  prediction_run.py  processed_clip.py  recording.py  sound_event.py  sound_event_annotation.py  sound_event_evaluation.py  sound_event_prediction.py  tag.py  task.py  token.py  training_guess.py  training_session.py  training_set.py  user.py  user_run.py
back/src/whombat/routers/: __init__.py  auth.py  deps.py
back/src/whombat/routes/: __init__.py  annotation_projects.py  annotation_tasks.py  annotations.py  audio.py  auth.py  clip_annotations.py  clip_evaluations.py  clip_predictions.py  clips.py  datasets.py  evaluation_sets.py  evaluation_tasks.py  evaluations.py  features.py  model_runs.py  notes.py  plugins.py  prediction_runs.py  recordings.py  sound_event_annotations.py  sound_event_evaluations.py  tags.py  (+7 more)
back/tests/: __init__.py  conftest.py  test_geometries.py  test_whombat.py
back/tests/data/: nips4b_annotation_project.json  nips4b_dataset.json  nips4b_evaluation_set.json  nips4b_model_run.json
back/tests/test_api/: conftest.py  test_annotation_projects.py  test_annotation_tasks.py  test_annotations.py  test_audio.py  test_clip_annotations.py  test_clips.py  test_datasets.py  test_features.py  test_notes.py  test_recordings.py  test_sound_event_annotations.py  test_sound_events.py  test_tags.py  test_tasks.py  test_users.py
back/tests/test_core/: conftest.py  test_files.py  test_geometries.py
back/tests/test_database/: test_database.py  test_migrations.py
back/tests/test_filters/: test_note_filters.py  test_recording_filters.py  test_tag_filters.py  test_users.py
back/tests/test_io/: test_annotation_project.py  test_datasets.py  test_evaluation_sets.py  test_model_runs.py
back/tests/test_routers/: conftest.py  test_annotation_projects.py  test_annotation_tasks.py  test_auth.py  test_clip_annotation.py  test_sound_event_annotations.py  test_tags.py
back/tests/test_system/: conftest.py  test_app.py
(+1965 files in other folders)
