[project]
name = "Whombat"
version = "0.1.0"
description = "Audio Annotation Tool"
authors = [
    {name = "Santiago Martinez", email = "santiago.mbal@gmail.com"},
]
dependencies = [
    "uvicorn[standard]>=0.20.0",
    "aiosqlite>=0.18.0",
    "passlib[bcrypt]>=1.7.4",
    "soundevent[audio,evaluation,geometry,plot]>=1.1.0",
    "fastapi>=0.101.0",
    "pydantic-settings>=2.0.2",
    "fastapi-users[sqlalchemy]>=12.1.1",
    "cachetools>=5.3.1",
    "asyncache>=0.3.1",
    "fastapi-pagination>=0.12.8",
    "librosa>=0.10.1",
    "alembic>=1.13.0",
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.14",
    "mkdocstrings[python]>=0.24.0",
]
postgre = [
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
]
[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.black]
line-length = 79

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src", "tests"]

[tool.mypy]
mypy_path = ".venv/lib/python3.11/site-packages"

[tool.pydocstyle]
convention = "numpy"

[tool.isort]
profile = "black"
line_length = 79

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.2.2",
    "coverage>=7.2.1",
    "black>=23.1.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.23.3",
    "tox>=4.7.0",
    "flake8>=6.1.0",
    "pyright>=1.1.320",
    "ruff>=0.1.7",
    "icecream>=2.1.3",
    "pytest-xdist>=3.5.0",
]

